Added spring security for login

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 New users click to register <a href="showReg">Register</a> </br>
-Existing users click to login <a href="login">Login</a>
+Existing users click to login <a href="showLogin">Login</a>
 </body>
 </html>
